--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1066,10 +1066,8 @@ img {
 }
 
 .home_blob-img{
-  width: 5px;
-  height: 10px;
-  border-radius: 50%;
-
+  
+width: 10px;
 }
 
 .home_blob{
@@ -1160,7 +1158,24 @@ img {
 
 }
 /* For medium devices */
-@media screen and (min-width: 568px){
+@media screen and (min-width: 580px)
+{
+   body
+  {
+    margin: 0;
+  }
+
+  .section{
+    padding: 6rem 0 2rem;
+  }
+
+  .home_blob-img{
+    width: 100px;
+  }
+
+}
+@media screen and (min-width: 568px)
+{
   .home_content{
     grid-template-columns: max-content 1fr 1fr;
   }
@@ -1172,6 +1187,10 @@ img {
   .home_img{
     order: 1;
     justify-self: center;
+  }
+
+  .home_blob-img{
+    width: 200px;
   }
 
   .about_container, 
@@ -1351,10 +1370,12 @@ img {
 
 /* For large devices */
 
-@media screen and (min-width: 933px){
+@media screen and (min-width: 933px)
+{
   .header,
   .main,
-  .footer_container{
+  .footer_container
+  {
     padding: 0;
   }
 
